public/modules/core/css/core.css
.content {
	margin-top: 50px;
}
.undecorated-link:hover {
	text-decoration: none;
}

.ng-invalid.ng-dirty {
	border-color: #FA787E;
}
.ng-valid.ng-dirty {
	border-color: #78FA89;
}

.drop-box {
	background-color: #93edf2;
	height:200px;
	width:100%;
}

.no-shadow {
	box-shadow: none;
}

.select-model {
	margin-top:-20px;
	margin-bottom:20px;
}

.home-no-padding {
	top: 0;
	left: 0;
	position: absolute;
}

.intro-container {
	background-color: #4CAF50;
    padding-top:40px;
    padding-bottom:60px;
}

.svg-logo {
	margin-left: 50%;
	width: 420px;
}

.md-toolbar-home {
	box-shadow: 0 2px 5px 0 rgba(0,0,0,0);
}

.logo-animation {
	-webkit-animation-duration: .5s;
    -moz-animation-duration: .5s;
	animation-duration: .5s;
	-webkit-animation-fill-mode: both;
    -moz-animation-fill-mode: both;
	animation-fill-mode: both;
}

@-webkit-keyframes fadeInDownBig {
	0% {
		opacity: 0;
		-webkit-transform: translateY(-2000px);
        transform: translateY(-2000px);
    }
	100% {
		opacity: 1;
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}
@keyframes fadeInDownBig {
	0% {
		opacity: 0;
		transform: translateY(-2000px);
	}
	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

.fadeInDownBig {
    -moz-animation-name: fadeInDownBig;
	-webkit-animation-name: fadeInDownBig;
	animation-name: fadeInDownBig;
}

.logo-type {
	text-align: center;
	color: rgb(255,255,255);
	font-weight: 200;
	font-size: 5em;
	/*letter-spacing: -0.05em;*/

}

.reg-btn {
	color: #fff;
	text-align: center;
	width: 20%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 3%;
	line-height: 2;
	font-weight: 600;
	background: #26000000;
}

.reg-btn:hover {
	background: #40000000;
}

a:link,a:visited.reg-btn-a {
	color: #FFF;
	text-decoration: none;
	target-new: none;
}
a:hover.reg-btn-a {
	color: #FFF;
	text-decoration: none;
	target-new: none;
}

a:visited.edit-dsf {
	color: #000;
	text-decoration: none;
	target-new: none;
}

a:hover.edit-dsf {
	color: #000;
	text-decoration: none;
	target-new: none;
}



a:link.edit-dsf {
	color: #000;
	text-decoration: none;
	target-new: none;
	font-weight: 500;
}

a:visited.edit-dsf {
	color: #000;
	text-decoration: none;
	target-new: none;
	font-weight: 500;
}

p.logo-subtext {
	width: 70%;
	margin-left: auto;
	margin-right: auto;
	font-size: .25em;
}

.home-box {
	padding-top: 20px;
	padding-bottom: 60px;
	background-color: #eeeeee;
}

.home-box1 {
	padding-left: 3%;
	padding-right: 1%;
}

.home-box2 {
	padding-left: 3%;
	padding-right: 1%;
}

.home-box3 {
	padding-left: 3%;
	padding-right: 1%;
}

.footer {
	padding-top:20px;
	padding-bottom: 20px;
	background-color: #212121;
	color: #80ffffff;
	font-size: .9em;
	text-align: center;
}

.footer-text {
    color:#cccccc;
	width: 35%;
	margin-left: auto;
	margin-right: auto;
}

.header-displayname {
	padding-right: 10px;
}

.header-icon {
	width: 28px;
	height: 28px;
}

.subnav-container {
	/*margin-top: -15px;*/
	/*margin-left: -15px;*/
	padding-bottom:1px;
	/*width: 120%;*/
}


a.pretty :visited{
	text-decoration: none;
}

a.pretty {
	text-decoration: none;
	color: black;
}

a.pretty :hover{
	color: grey;
}

.no_padding{
	padding: 0;
}

.pretty_nav{
	margin-top: 6.75%;
	color: #4CAF50;
}

div.shocks {
	margin-bottom: 1.5em;
}

.insts-container {
	padding-bottom: 1.05em;
}
.insts-container, li, p {
	padding-bottom: 1em;
}

.resize_button{
	width: 65%;
	height: 65%;
	margin-top: 17.5%;
	margin-left: 17.5%;
}

pre {
	white-space:pre-wrap;
}

.range-breaker {
	margin-bottom: 20px;
}

.deleteButton{
	margin-right: 0.5%;
}

.om-sidebar {
	overflow:scroll;
	/*padding:0 20px 20px 20px;*/
	min-width:300px;
	width:300px;
	margin-right:0;
}
.om-sidebar h3 {
	padding-left:20px;
}

.om-sidebar md-input-container {
	padding-left:20px;
}

.parameter-item {
	margin-right:10px;
	padding-left:5px;
	padding-bottom:5px;
}

.parameter-item > * {
	/*padding:0;*/
	/*padding-left: 5px;*/
	padding-top: 5px;
	margin:0;
}

md-divider.vertical {
	border-top: 0;
	border-left: 1px solid;
	border-left-color: #26000000;
	border-bottom:20px;
}

.description {
	font-size:13px;
	color:grey;
	line-height: normal;
	padding-bottom:0;
}

.om-button-small {
	height:70%;
	font-size:70%;
}

.edit-parameter {
	width:400px;
}

.edit-dsf {
	width:750px;
}

a.edit-dsf {
	color: #000000;
}

.equations {
	width:300px;
}

.md-header {
	z-index: 99;
}
/* Left Sidebar */

.md-2-line {
	padding-left:20px;
	padding-top:20px;
	padding-bottom:20px;
}
.md-2-line:hover {
	background-color:#eee;
	cursor: pointer;
}
.md-2-line p {
	padding:0;
}
.md-2-line h4.md-subhead {
	margin-bottom:8px;
}

/* Run log */
.log-status-run {
	color: inherit;
}
.log-status-err {
	color: rgb(244,67,54);
}
.log-status-success {
	color: #4CAF50;
}


.console {
	width: 100%;
	background-color: #eee;
	border: 1px solid #e1e1e8;
	font-family: "Courier New", Courier, monospace;
	padding: 20px;
	white-space: pre;
	overflow-y: scroll;
	overflow-x: scroll;
}

.md-button {
    color:white;
}

/* ng-cloak */
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

.md-toolbar-tools a, md-toolbar:not(.md-menu-toolbar) md-icon {
    color:white !important;
}

.simulation-detail {
    padding-left:20px;
}

.simulation-name {
    padding-bottom:10px;
}

